--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Safebox Generator</title>
-        <link rel="icon" type="image/x-icon" href="icon.png">
+        <link rel="icon" type="image/x-icon" href="./assets/logo.png">
         <style>
             * {box-sizing: border-box;}
             
@@ -123,7 +123,7 @@
             </div>
         </div>
         
-        <script src="./crypto.js"></script>
+        <script src="./assets/crypto.js"></script>
         <script>
             (function(){
                 $ = (id) => {return document.getElementById(id);}
